forkless PoC: Issue 04 - dissolve PolarisResolutionManifest in PolarisAdminService
Completes the manifest-field dissolution for the last remaining OSS consumer flagged
as a separate follow-up in e36e601d. PolarisAdminService's 11 authorizeXxxOperationOrThrow
helpers now build a ResolutionRequest (paths + top-level names) and call
entityResolver.resolve(...) once, returning the raw ResolutionResult instead of a
PolarisResolutionManifest. Downstream reads (getCatalogByName, getPrincipalByName,
getCatalogRoleByName, the root-container/passthrough-facade checks used by grant/revoke
and the synthetic namespace/table-like entity creation for federated catalogs) go through
AuthorizationChain's existing resolvedPath/resolvedTopLevel/rootContainerAsPath helpers --
the same composition PolarisAuthorizerImpl already uses internally -- rather than a
second, PolarisAdminService-specific adapter.

Two correctness fixes found by running the full suite rather than trusting the port:
authorizeGrantOnRootContainerToPrincipalRoleOperationOrThrow's resolve request was missing
ROOT as a top-level name, so AuthorizationChain.rootContainerAsPath threw NPE via
List.of(null) for every grant/revoke-on-root-container test (surfaced as ~1500 failures in
the exhaustive per-privilege authz matrix); and the addPassthroughPath-registered
namespace/table-like paths in the grant/revoke authorize helpers are non-optional
(ResolverPath's 2-arg ctor defaults to false, matching the retired manifest's own
registration), not optional as I'd first written them.

PolarisAdminServiceTest's Mockito-based unit tests rebuilt the same way as the earlier
SnowflakeIcebergCatalogHandlerTest conversion: a fake EntityResolver answer driven by
per-test required/passthrough path maps, computing a real PATH_COULD_NOT_BE_FULLY_RESOLVED
status when a required path has no stub instead of the old mock's independently-stubbable
(and here inconsistent) resolveAll()/getResolvedPath() pair. Two tests asserted on an
exception ty